# raytracer

./: .gitignore  CMakeLists.txt  FutureFeatures.txt  README.md  box.txt  config.cfg  configMAXTEST.cfg  cornellBox.txt  cornellModified.txt  cornell_box.mtl  devicePrograms.cu.ptx  makefile  missingMat.txt  readme  sun.txt  teapot.mtl  testEmitter.txt  testScene.txt  testTriangle.txt  user.cfg
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  Core.h  HitRecord.cpp  HitRecord.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Vec3.cpp  Vec3.h  Window.cpp  Window.h  devicePrograms.cu  main.cpp
src/config/: CVar.cpp  CVar.h  CVarDescriptor.h  Config.cpp  Config.h
src/includes/: DRand48.h  ply.cpp
src/logging/: ConsoleLog.cpp  ConsoleLog.h  Log.h
src/materials/: Dielectric.cpp  Dielectric.h  DiffuseEmitter.cpp  DiffuseEmitter.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  Metal.cpp  Metal.h  MissingMat.cpp  MissingMat.h
src/renderer/: RayTracer.cpp  RayTracer.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  SoftwareRenderer.h.wip
src/scene/: Scene.cpp  Scene.h
src/shapes/: Rect.cpp  Rect.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/win64/: Win32Application.cpp  Win32Application.h
